--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "note-taker",
   "version": "1.0.0",
   "description": "An application that can be used to write and save notes.",
-  "main": "./server.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./server.js"
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.18.2"
+  }
 }
